更改网站配置，完成rss订阅，本地搜索，文字数目统计

--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,29 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: next-reloaded
 
+# Extensions
+## Plugins: http://hexo.io/plugins/
+#RSS订阅
+plugin:
+- hexo-generator-feed
+#Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 20
+
+#symbols_count_time:
+#  symbols: true
+#  time: true
+#  total_symbols: true
+#  total_time: true
+
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
