--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,47 @@
-language: node_js
-node_js: stable
+language: node_js  #设置语言
 
-# S: Build Lifecycle
+node_js: stable  #设置相应的版本
+
+cache:
+    apt: true
+    directories:
+        - node_modules # 缓存不经常更改的内容
+
+before_install:
+    - export TZ='Asia/Shanghai' # 更改时区
+
 install:
-  - npm install
-
-
-#before_script:
- # - npm install -g gulp
+  - npm install  #安装hexo及插件
 
 script:
-  - hexo g
+  - hexo clean  #清除
+  - hexo g && gulp  #生成
 
 after_script:
+  - git clone https://${GH_REF} .deploy_git  # GH_REF是最下面配置的仓库地址
+  - cd .deploy_git
+  - git checkout master
+  - cd ../
+  - mv .deploy_git/.git/ ./public/   # 这一步之前的操作是为了保留master分支的提交记录，不然每次git init的话只有1条commit
   - cd ./public
-  - git init
-  - git config user.name "greedyboy"
-  - git config user.email "greedyboy@163.com"
+  - git config user.name "greedyboy"  #修改name
+  - git config user.email "greedyboy@163.com"  #修改email
   - git add .
-  - git commit -m "Update docs"
-  - git push --force --quiet "https://${gh-token}@${GH_REF}" master:master
-# E: Build LifeCycle
+  - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"  # 提交记录包含时间 跟上面更改时区配合
+  - git push --force --quiet "https://${Travis_Token}@${GH_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
 
 branches:
   only:
-    - blog-source
+    - master  #只监测source分支，source是我的分支的名称，可根据自己情况设置
 env:
  global:
-   - GH_REF: git@github.com:greedyboy/citest.git
+   - GH_REF: github.com/greedyboy/citest.git  #设置GH_REF，注意更改yourname
+
+# configure notifications (email, IRC, campfire etc)
+# please update this section to your needs!
+# https://docs.travis-ci.com/user/notifications/
+notifications:
+  email:
+    - greedyboy@163.com
+  on_success: change
+  on_failure: always
