--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ after_script:
   - git config user.email "greedyboy@163.com"  #修改email
   - git add .
   - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"  # 提交记录包含时间 跟上面更改时区配合
-  - git push --force --quiet "https://${Travis_Token}@${GH_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
+  - git push --force --quiet "https://${gh-token}@${GH_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
 
 branches:
   only:
