--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ script:
   - hexo g  #生成
 
 after_script:
-  - git clone https://${CO_REF} .deploy_git  # GH_REF是最下面配置的仓库地址
+#- git clone https://${GH_REF} .deploy_git  # GH_REF是最下面配置的仓库地址
+  - git clone https://greedyboy:${CO_REF} .deploy_git  # GH_REF是最下面配置的仓库地址
   - cd .deploy_git
   - git checkout master
   - cd ../
