程序源程序。目前可用，准备升级hexo和hexo-next

--- a/_config.yml
+++ b/_config.yml
@@ -108,5 +108,6 @@ deploy:
   type: git
   #repo: git@github.com:greedyboy/greedyboy.github.io.git
   repo: https://git.coding.net/greedyboy/WQian.Net.git
+  #repo: git@git.coding.net:greedyboy/WQian.Net.git
   branch: master
 
