--- a/_config.yml
+++ b/_config.yml
@@ -102,12 +102,23 @@ sitemap:
 baidusitemap:
   path: baidusitemap.xml
 
+# 百度熊掌号
+baidu_url_submit:
+  count: 10 ## 提交最新的一个链接
+  host: https://wqian.net ## 在百度站长平台中注册的域名
+  token: s0qosKUimcSz3p38 ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+  path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
+  xz_appid: 1598180106327679 ## 你的熊掌号 appid
+  xz_token: jy3FBOUkbY8fLr14 ## 你的熊掌号 token
+  xz_count: 10 ## 从所有的提交的数据当中选取最新的10条,该数量跟你的熊掌号而定
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
+- type: git    #部署类型
   #repo: git@github.com:greedyboy/greedyboy.github.io.git
-  repo: https://git.coding.net/greedyboy/WQian.Net.git
+  repo: https://git.dev.tencent.com/greedyboy/WQian.Net.git
   #repo: git@git.coding.net:greedyboy/WQian.Net.git
   branch: master
 
+- type: baidu_url_submitter # 百度
+- type: baidu_xz_url_submitter # 百度熊掌号
