--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ script:
   - hexo g  #生成
 
 after_script:
-#- git clone https://${GH_REF} .deploy_git  # GH_REF是最下面配置的仓库地址
-  - git clone https://${CO_REF} .deploy_git  # GH_REF是最下面配置的仓库地址
+  - git clone https://${GH_REF} .deploy_git  # GH_REF是最下面配置的仓库地址
+#  - git clone https://${CO_REF} .deploy_git  # GH_REF是最下面配置的仓库地址
   - cd .deploy_git
   - git checkout master
   - cd ../
@@ -29,7 +29,7 @@ after_script:
   - git config user.email "greedyboy@163.com"  #修改email
   - git add .
   - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"  # 提交记录包含时间 跟上面更改时区配合
-  - git push --force --quiet "https://greedyboy:${CO_TOKEN}@${CO_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
+  - git push --force --quiet "https://greedyboy:${GH_TOKEN}@${GH_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
 
 branches:
   only:
