--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,11 @@ after_script:
   - git add .
   - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"  # 提交记录包含时间 跟上面更改时区配合
   - git push --force --quiet "https://greedyboy:${CO_TOKEN}@${CO_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
-#  - git push --force --quiet "https://greedyboy:${GH_TOKEN}@${GH_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
+  - git push --force --quiet "https://greedyboy:${GH_TOKEN}@${GH_REF}" master:master  #GH_TOKEN是在Travis中配置token的名称
 branches:
   only:
     - master  #只监测source分支，source是我的分支的名称，可根据自己情况设置
+    - ciwebs
 env:
  global:
    - GH_REF: github.com/greedyboy/citest.git  #设置GH_REF，注意更改yourname
