--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: GKing.Net
-subtitle: Working For Daybreak
+title: Gking大学网站
+subtitle: 有价值和情怀的域名
 description:
 keywords:
-author: GKing
+author: 中国大学情报站
 language: zh-CN
 timezone: Asia/Shanghai
 
