--- a/source_gking/_data/next.yml
+++ b/source_gking/_data/next.yml
@@ -312,8 +312,8 @@ excerpt_description: true
 # Automatically Excerpt (Not recommend).
 # Use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: false
-  length: 150
+  enable: True
+  length: 220
 
 # Read more button
 # If true, the read more button would be displayed in excerpt section.
