修改网站名称

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Gking大学网站
+title: 大学网站|出售域名
 subtitle: 有价值和情怀的域名
 description:
 keywords:
