--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-
+  
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -53,7 +53,7 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-
+  
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -114,5 +114,7 @@ baidu_url_submit:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
 - type: git    #部署类型
-  repo: x.git
+  #repo: git@github.com:greedyboy/greedyboy.github.io.git
+  repo: git@github.com:greeedyboy/weba.git
+  #repo: git@git.coding.net:greedyboy/WQian.Net.git
   branch: master
