--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "hexo-symbols-count-time": "^0.3.2",
-    "hexo-wordcount": "^3.0.2"
+    "hexo-symbols-count-time": "^0.3.2"
   }
 }
